<resources>
    <string name="app_name">Trendy</string>
    <string name="twitter_api_consumer_key"></string>
    <string name="twitter_api_consumer_secret_key"></string>
    <string name="google_server_key"></string>
    <string name="google_android_key"></string>
    <string name="instagram_access_token"></string>
    <string name="pinterest_access_token"></string>
    <string name="facebook_access_token"></string>
    <string name="soundcloud_id"></string>
    <string name="woocommerce_consumer_key"></string>
    <string name="woocommerce_consumer_secret"></string>
    <string name="woocommerce_url"></string>
    <string name="onesignal_app_id">68e43b16-577d-43e9-8a28-ded1f22413cf</string>
    <string name="onesignal_google_project_number">494138530056</string>
    <string name="about_text"><![CDATA[   
    <center><b>Version 1.0</b>
    <br><br>Thank you for downloading our app<br><br>
    <i>Aiora Apps</i></center>
    ]]></string>
    <string name="google_play_license"></string>
    <string name="product_id"></string>
    <string name="admob_banner_id"></string>
    <string name="admob_interstitial_id"></string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="profile_image">Profile image</string>
    <string name="message">Message</string>
    <string name="tweet_share_header">\'s tweet</string>
    <string name="ok">OK</string>
    <string name="feed_title_value">Feed title</string>
    <string name="feed_link_value">Feed description</string>
    <string name="feed_description_value">Feed link</string>
    <string name="btn_video">Play video</string>
    <string name="btn_audio">Play audio</string>
    <string name="video_no_live_title">On a break</string>
    <string name="video_no_live">No live streams available now</string>
    <string name="video_live">Select a stream</string>
    <string name="play_button">Play</string>
    <string name="video_share_begin">"I just saw this video: "</string>
    <string name="video_share_middle">" in the \""</string>
    <string name="video_share_end">\" app</string>
    <string name="video_subtitle_start">"Uploaded at "</string>
    <string name="video_subtitle_end">" by "</string>
    <string name="webview_title"></string>
    <string name="web_share_begin">"Look what I saw in the \""</string>
    <string name="web_share_end">"\"app: "</string>
    <string name="item_del_text">You sure want to delete all your Liked articles?</string>
    <string name="item_del_confirmation">Yeah</string>
    <string name="no_favorites">Your can add (more) favorites by opening an item and selecting \"favorite\"</string>
    <string name="favorite_success">You Liked this Item, Now you can enjoy it Offline anytime.</string>
    <string name="favorite_duplicate">This item has already been Liked</string>
    <string name="favorite_menu_delete">Unlike</string>
    <string name="settings_general_summary">Username and password information</string>
    <string name="settings_general">General</string>
    <string name="settings_showmenu_summary">Yes/No</string>
    <string name="settings_showmenu">Show side menu on start</string>
    <string name="settings_fontsize_summary">Preferred text size for articles and posts</string>
    <string name="settings_fontsize">Text size</string>
    <string name="settings_fontsize_xl">Extra Large</string>
    <string name="settings_fontsize_l">Large</string>
    <string name="settings_fontsize_m">Default</string>
    <string name="settings_fontsize_s">Small</string>
    <string name="settings_fontsize_xs">Extra Small</string>
    <string name="settings_other_summary">Other information</string>
    <string name="settings_other">Other</string>
    <string name="settings_aboutus_summary">Information about our application</string>
    <string name="settings_aboutus">About</string>
    <string name="settings_rate_summary">Help other users enjoy this application</string>
    <string name="settings_rate">Rate this app</string>
    <string name="settings_billing_summary">Manage your In-App purchases</string>
    <string name="settings_billing">In-App Products.</string>
    <string name="settings_purchase_summary">Removes ads and unlocks more content</string>
    <string name="settings_purchase">Unlock extra features</string>
    <string name="settings_restore_purchase_success">Previous purchases have been restored.</string>
    <string name="settings_purchase_success">Previous purchases have been restored.</string>
    <string name="settings_purchase_fail">Purchase failed.</string>
    <string name="dialog_purchase_title">Content locked.</string>
    <string name="dialog_purchase">In order to view this content, you need to unlock the full version by making a one time purchase.\n\nThis will also remove advertisements throughout the app.</string>
    <string name="wordpress_subtitle_start">"Published "</string>
    <string name="wordpress_subtitle_end">" by "</string>
    <string name="related">Related</string>
    <string name="volume_low">Turn your volume up!</string>
    <string name="now_playing">Now playing</string>
    <string name="toggle_fullscreen">Toggle Fullscreen</string>
    <string name="notification_playing">Playing audio - Live Stream</string>
    <string name="audio_notification">Background media playback</string>
    <string name="error_retry">Failed to connect to stream... </string>
    <string name="error_retry_later">Please try again in a few seconds... </string>
    <string name="radio_playing_other">Already playing another station. Press play again to play this station instead.</string>
    <string name="image_descr">Image</string>
    <string name="set">Set</string>
    <string name="save">Save</string>
    <string name="tumblr_share_begin">Check out this post I saw in</string>
    <string name="saved">Saved at:</string>
    <string name="set_confirm">Are you sure you would like to set this image as wallpaper?</string>
    <string name="set_success">You have set a new Wallpaper!</string>
    <string name="duration">%1$d:%2$02d</string>
    <string name="toast_track_added">Added to the playlist. Touch again to play now.</string>
    <string name="playback_view_time">%1$02d:%2$02d</string>
    <string name="playback_view_title">&lt;b>%1$s&lt;/b> - %2$s</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total</string>
    <string name="cart_success">Added to cart</string>
    <string name="order_success">Thank you for your order!</string>
    <string name="order_success_subtitle">We have received your order!</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="view_cart">View cart</string>
    <string name="cart_title">Shopping Cart</string>
    <string name="cart_failed">We were unable to checkout your items..</string>
    <string name="category">Category</string>
    <string name="latest_products">Latest Products</string>
    <string name="tag">Tag</string>
    <string name="weight">Weight</string>
    <string name="tax_notice">Tax included</string>
    <string name="dimensions">Dimensions</string>
    <string name="reviews">%2d Rating(s)</string>
    <string name="quantity">%2d pcs</string>
    <string name="quantity_picker">Select quantity</string>
    <string name="cart_empty_title">Your cart is empty</string>
    <string name="cart_empty_subtitle">Start shopping to fill your cart with items</string>
    <string name="review">Reviews</string>
    <string name="details">Details</string>
    <string name="varations">Options</string>
    <string name="varations_missing">Something went wrong with loading product variations</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="version_no">Version 1.0.1</string>
    <string name="all_rights_reserved">All rights reserved.</string>
    <string name="copyright_text">© 2018 Aiora Inc.</string>
    <string name="background_audio">Playing audio</string>
    <string name="download_permission_explaination">In order to download files, you need to grant us permission to your storage.\n\nAfter granting us access, you may go ahead and download the file.</string>
    <string name="download_permission_grant">Grant permission</string>
    <string name="download_unavailable">You can not download this content</string>
    <string name="download_failed">Download failed</string>
    <string name="download_open_failed">No app to handle file</string>
    <string name="action_download">Download</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="wallpaper_success">Congo, Wallpaper has been set!</string>
    <string name="settings">Settings</string>
    <string name="favorites">Liked Posts</string>
    <string name="invalid_configuration">Sorry, Some Error Occurred</string>
    <string name="share_header">Share</string>
    <string name="about_header">About</string>
    <string name="favorite_button">Like</string>
    <string name="open_button">View in Web</string>
    <string name="textview_date">"Date: "</string>
    <string name="loading">Close your Eyes, Open your Eyes...</string>
    <string name="empty_textview">Error loading data</string>
    <string name="no_results">No Juice in the Glass</string>
    <string name="no_results_subtitle">We make sure to get Quality Fruits next time.</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="comments">Comments</string>
    <string name="share">Share</string>
    <string name="info">Info</string>
    <string name="refresh">Refresh</string>
    <string name="already_loading">We are already loading some new content!</string>
    <string name="intent_failed">Failed to start external application.</string>
    <string name="search_hint">Search</string>
    <string name="search">Search</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="permissions_required">You need to accept all required permissions to access this content.</string>
    <string name="dialog_connection_title">Servers unreachable</string>
    <string name="dialog_connection_description">We can not connect with our APIs.\n\nPlease ensure that you have set up your API keys and parameters as documented!</string>
    <string name="dialog_internet_title">No internet</string>
    <string name="dialog_internet_description">You seem to have no internet connection, this app requires internet to get the latest content.\n\nYou can continue accessing Liked Posts Offline by tapping <b>3 Dots in Top Right Corner then Liked Posts</b></string>
    <string name="team_string">Team</string>
    <string name="work_string">Work :</string>
    <string name="kevin_valani"><u>Kevin Valani</u></string>
    <string name="siddique_shaikh"><u>Siddique Shaikh</u></string>
    <string name="harsh_patel"><u>Harsh Patel</u></string>
    <string name="valanikevin_social">/valanikevin</string>
    <string name="siddiqueshaikh_social">/siddiqueshaikh</string>
    <string name="harsh_patel_social">/harsh_patel_99</string>
    <string name="kevin_work">Graphics, Business, Development</string>
    <string name="harsh_work">Developer, Tester, Handler</string>
    <string name="siddique_work">PR, Research, Analyst</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
</resources>