<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:elevation="8dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/light_gray"
        android:minHeight="@dimen/image_height_youtube"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_detail_horizontal_margin"
            android:paddingRight="@dimen/activity_detail_horizontal_margin">

            <!-- description -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/price_holder"
                    android:layout_toStartOf="@+id/price_holder"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/empty_textview"
                        android:textColor="@color/grey_dark"
                        android:textDirection="locale"
                        android:textSize="@dimen/textsize_xxl" />

                    <TextView
                        android:id="@+id/subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_xxs"
                        android:text="@string/empty_textview"
                        android:textColor="@color/dim_gray"
                        android:textDirection="locale" />

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="all"
                        android:fontFamily="sans-serif-light"
                        android:linksClickable="true"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/empty_textview"
                        android:textDirection="locale"
                        android:textSize="@dimen/textsize_m" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/price_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="24dp"
                    android:foregroundGravity="bottom"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/price_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$12"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <TextView
                        android:id="@+id/tax_notice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tax_notice"
                        android:textColor="@color/gray"
                        android:textSize="8dp" />

                    <TextView
                        android:id="@+id/price_original_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rating_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/rating_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/review"
                    android:textColor="@color/grey_dark"
                    android:textDirection="locale"
                    android:textSize="@dimen/textsize_xxl" />

                <TextView
                    android:id="@+id/rating_numeric"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/rating_title"
                    android:text="4.3"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Display2"
                    android:textSize="35dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rating_title"
                    android:layout_marginLeft="@dimen/default_padding"
                    android:layout_marginStart="@dimen/default_padding"
                    android:layout_toEndOf="@+id/rating_numeric"
                    android:layout_toRightOf="@+id/rating_numeric"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/default_padding">

                    <RatingBar
                        android:id="@+id/rating"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:isIndicator="true"
                        android:stepSize="0.1" />

                    <TextView
                        android:id="@+id/rating_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reviews"
                        android:textColor="@color/dim_gray"
                        android:textSize="@dimen/textsize_xxs" />

                </LinearLayout>

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/details"
                android:textColor="@color/grey_dark"
                android:textDirection="locale"
                android:textSize="@dimen/textsize_xxl" />

            <TableLayout
                android:id="@+id/properties_grid"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableLayout>

            <TextView
                android:id="@+id/related_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/related"
                android:visibility="gone"
                android:textColor="@color/grey_dark"
                android:textDirection="locale"
                android:textSize="@dimen/textsize_xxl" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/related_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_detail_horizontal_margin"
            android:paddingRight="@dimen/activity_detail_horizontal_margin"
            android:clipToPadding="false"/>

        <Button
            android:id="@+id/favorite"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_m"
            android:text="@string/favorite_button"
            android:textColor="@color/myAccentColor" />

    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/cart_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/image"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="-32dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/play_button"
        android:elevation="24dp"
        android:src="@drawable/ic_bag"
        app:fabSize="normal" />

</RelativeLayout>

