<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/app_name"
        android:textSize="35sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="Version 1.0.1"
        android:textSize="20sp" />


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/trendyImageView"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:layout_gravity="center" />

        <ImageView
            android:id="@+id/aioraImageView"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/copyright_text"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/all_rights_reserved"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/get_in_touch_team_text_view"
        android:layout_marginTop="40dp"
        android:background="#000"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="#fff"
        android:text="Get in touch with Team"
        android:textSize="20sp" />

</LinearLayout>


    <!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.aiora.trendy.about">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="188dp"
            android:layout_height="190dp"
            app:srcCompat="@mipmap/ic_launcher"
            tools:layout_editor_absoluteX="86dp"
            tools:layout_editor_absoluteY="71dp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30dp"
            tools:layout_editor_absoluteX="4dp"
            tools:layout_editor_absoluteY="261dp"
            tools:text="TRENDY" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="335dp"
            android:layout_height="132dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Desc"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="339dp"
            tools:text="Trendy is a collection of Articles, Post, Videos, Tweets, Quote, Shayari, etc which is trending today." />
    </android.support.constraint.ConstraintLayout>-->
